# mpi_ring

./: CMakeLists.txt  Dockerfile
.docker/: image_name
.podman/: image_name
src/: main.cpp
